# m5stack-coding-toys

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.claude/skills/m5stack-cores3-bring-up/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/architecture/: README.md  adding-a-host-device-rpc.md  ble-transport.md  daemon-singleton-and-install.md  driving-a-worktree-build-on-device.md  firmware-hardware-gotchas.md  screenshot-rgb565.md  status-display.md
docs/superpowers/plans/: 2026-05-25-cli-version.md  2026-05-26-m5ct-screenshot.md  2026-05-26-m5ct-tap-command.md  2026-05-26-status-badge-activity.md  2026-05-26-workspace-page-density.md  2026-05-27-multi-claude-sessions.md  2026-05-27-terminal-slots.md  2026-05-30-remove-auto-pin.md  2026-05-30-status-screen-header-footer.md
docs/superpowers/specs/: 2026-05-25-cli-version-design.md  (+8 more)
firmware/: platformio.ini
firmware-idf/waveshare-amoled/: .gitignore  CMakeLists.txt  README.md  TODO.md  partitions.csv  sdkconfig.defaults
firmware-idf/waveshare-amoled/main/: CMakeLists.txt  app_main.c  battery.c  battery.h  ble.c  ble.h  buttons.c  buttons.h  idf_component.yml  model.c  model.h  orient.c  orient.h  power.c  power.h  proto.c  proto.h  ui.c  ui.h
firmware/scripts/: build-manifest.sh
firmware/src/: main.cpp
scripts/: dev-drive.mjs  dev-shot.mjs  gen-firmware-index.mjs  listen.mjs
tools/fake-firmware/: package.json
tools/gen-msgs/: package.json
(+63 files in other folders)
